# Scientific-Effort

./: README.md
Task3_demo/Project1/: Project1.sln
Task3_demo/Project1/Project1/: Project1.vcxproj
Task3_demo/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Task3_demo/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Task3_demo/TESTcode/: test.ll
Task3_demo/TESTcode/demo/: extract_context.py  test.ll
Task3_demo/TESTcode/demo/返回函数体名称/: callgraph.txt  callgraph_clean.txt  extract_context.py  function_multi_hop_result.txt  test.cpp
Task3_demo/和zh/: Coreutils_analysis_result.out
Task3_demo/和zh/sqlite/: callgraph.txt  sqlite_analysis_result(2).out
Task3_demo/和zh/sqlite/sqlite-amalgamation-3510000/: CGPass.cpp  CMakeLists.txt
Task3_demo/和zh/sqlite/sqlite-amalgamation-3510000/25.12.5/: CGPass(3).cpp  CMakeLists(2).txt
文献/: ConfLog论文阅读.md
综述/23355035李梦瑶/: 基于大语言模型的软件日志生成与静态调用上下文技术综述.pptx
